build: submodule 처리 및 빌드 확인 완료

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,14 @@ tasks.named('asciidoctor') {
     dependsOn test
 }
 
+task copyPrivate(type: Copy){
+    copy {
+        from './submodule-data'
+        include "*.yaml"
+        into 'src/main/resources'
+    }
+}
+
 bootJar {
     dependsOn asciidoctor
     from("${asciidoctor.outputDir}") {
