--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     // Spring REST Docs
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
+    // Json
+    implementation 'org.json:json:20231013'
+
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
