chore : JSON 관련 중복된 jar 파일이 존재하는 문제 해결(test시 exclude하도록 build.gradle 수정)

--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,9 @@ dependencies {
     implementation 'org.json:json:20231013'
 
     // Test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation("org.springframework.boot:spring-boot-starter-test"){
+        exclude group: "com.vaadin.external.google", module:"android-json"
+    }
 }
 
 tasks.named('test') {
