--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,12 @@ jobs:
     name: Build and test project
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the submodules
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          token: ${{ secrets.ACTION_TOKEN }}
+
       - name: Checkout the code
         uses: actions/checkout@v3
 
