build: 서브 모듈 설정 다시 업데이트

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout the submodules
         uses: actions/checkout@v3
         with:
-          submodules: recursive
+          submodules: true
           token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Checkout the code
