--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          token: ${{ secrets.ACTION_TOKEN }}
+          token: ${{ secrets.SUBMODULE_TOKEN }}
 
       - name: Checkout the code
         uses: actions/checkout@v3
